--- a/Colmar/CSS/info.css
+++ b/Colmar/CSS/info.css
@@ -2,6 +2,7 @@
 
 .info {
     display: flex;
+    margin-bottom: 32px;
 }
 
 .info-topic {
@@ -31,6 +32,7 @@
 
 .info-topic p:last-child {
     padding: 32px 0;
+    padding-bottom: 0;
     padding-left: 24px;
     font-size: 13px;
     color: #393939;
